add sass styling and some html for form input and results

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <title>Github Search</title>
   </head>
   <body>
-    <h1>TEST</h1>
-
+    <div class="container">
+      <h1>TEST</h1>
+      <form class="" action="index.html" method="post">
+        <label for=""></label>
+        <input type="text" name="name" value="">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
+      <div class="results">
+        
+      </div>
+    </div>
   </body>
 </html>
