--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>TEST</h1>
-      <form class="" action="index.html" method="post">
-        <label for=""></label>
-        <input type="text" name="name" value="">
+      <h1>GitHub Search</h1>
+      <form>
+        <label>Search by username</label>
+        <input type="text" class="form-control" id="username">
+        <br>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
       <div class="results">
-        
       </div>
     </div>
   </body>
