--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <br>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
-      <div class="results">
+      <div class="result">
+        <h3 class="username"></h3>
       </div>
     </div>
   </body>
