--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <button id="clicker" type="button" name="button">CLICK ME</button>
       <h1>GitHub Search</h1>
       <form>
         <label>Search by username</label>
