add a little styling

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       <h1>GitHub Search</h1>
       <form>
         <label>Search by username</label>
-        <input type="text" class="form-control" id="username">
+        <input type="text" class="form-control" id="username" required>
         <br>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
+      <div class="jumbotron">
         <h3 class="username"></h3>
-      <div class="result">
+        <div class="result">
+        </div>
       </div>
     </div>
   </body>
