add following info to getname funtion

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
       <div class="jumbotron">
+        <h3 id="inputUsername"></h3>
+        <img id="avatar">
+        <h3 id="nameOfUser"></h3>
+        <h3 id="followers"></h3>
+        <h3 id="following"></h3>
         <h3 class="username"></h3>
         <div class="result">
         </div>
