refactor functions to include image in getuserinfo function instead

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
-      <div class="jumbotron">
+      <div class="jumbotron" id="everything">
         <h3 id="inputUsername"></h3>
         <img id="avatar">
         <h3 id="nameOfUser"></h3>
